fix: comment undefined check chore: ran through prettier (ironic) fix: other typescript errors / warnings due to outdated packages.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-  "npm.exclude": [
-    "**/ext/jinx-rust"
-  ],
+  "npm.exclude": ["**/ext/jinx-rust"],
   "files.exclude": {
     "ext": true
   }
