--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,8 +1,11 @@
 {
-	"extends": "../tsconfig.base.json",
-	"include": ["../tests", "../scripts"],
-	"references": [{ "path": "../tsconfig.json" }, { "path": "../ext/jinx-rust/scripts/tsconfig.json" }],
-	"compilerOptions": {
-		"rootDir": ".."
-	}
+  "extends": "../tsconfig.base.json",
+  "include": ["../tests", "../scripts"],
+  "references": [
+    { "path": "../tsconfig.json" },
+    { "path": "../ext/jinx-rust/scripts/tsconfig.json" }
+  ],
+  "compilerOptions": {
+    "rootDir": ".."
+  }
 }
